# sggw-python-project-1

./: README.md  experiments.db  missing_values.csv  pyproject.toml  test.txt  values.csv
src/day2/: exercise1  exercise2  test.txt
src/my-app/: .gitignore  main.py
